Fix collapse panel text alignment bug (DF-1151), cleanup

--- a/alv-portal-ui/src/app/online-services/work-efforts/work-effort-form/work-effort-form.component.scss
+++ b/alv-portal-ui/src/app/online-services/work-efforts/work-effort-form/work-effort-form.component.scss
@@ -1,6 +1,3 @@
-::ng-deep alv-collapse-panel > button.btn  {
-  text-align: left;
-}
 
 ::ng-deep .info-panel > .alv-panel {
   min-width: 230px;
