--- a/alv-portal-ui/src/app/shared/layout/collapse-panel/collapse-panel.component.scss
+++ b/alv-portal-ui/src/app/shared/layout/collapse-panel/collapse-panel.component.scss
@@ -5,6 +5,7 @@ button.collapse-button {
   text-decoration: none;
   border-bottom: 1px solid $color-medium-grey;
   margin-bottom: 0.5em;
+  text-align: left;
   &:focus {
     box-shadow: none;
   }
